deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zehraguard
  labels:
    name: zehraguard
